--- a/index.html
+++ b/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="es">
+  <head>
+    <link rel="stylesheet" href="./src/styles.css">
+    <linkrel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Alien</h1>
-    <h2>asdasdasdas</h2>
+    <title>AlienPag</title>
+  </head>
+  <body class="bakugou" > 
+    <nav class="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">AlienWEP</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+              <li class="nav-item dropdown">
+              <ul class="dropdown-menu">
+              </ul>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link disabled">Disabled</a>
+           </li>
+          </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <h1>alienWEP</h1>
+        <div style="width: 18rem;">
+          <img src="https://api.minimalavatars.com/avatar/random/svg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">alienWEP</h5>
+            <b>
+            <p class="card-text">Vine aca por que Marte esta sobre poblado .-.</p>
+            </b>
+          </div>
+          <ul class="animate__animated animate__rubberBand">
+            <b>
+            <li id="Planet" class="list-group-item">Planeta natal</li>
+            <h6 id="nombre" class="list-group-item">Names</h6>
+            </b>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="./src/script.js"></script>
 </body>
 </html>
