--- a/index.html
+++ b/index.html
@@ -38,30 +38,38 @@
         </div>
       </div>
     </nav>
+    
     <div class="container text-center">
       <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4">
-          <h1>alienWEP</h1>
-          <div style="width: 18rem;">
-            <img src="https://api.minimalavatars.com/avatar/random/svg" class="card-img-top" alt="...">
+          <div class="card" style="width: 18rem;">
             <div class="card-body">
-            <h5 class="card-title">alienWEP</h5>
-            <b>
-              <p class="card-text">Vine aca por que Marte esta sobre poblado .-.</p>
-            </b>
+              <h1>alienWEP</h1>
+              <div style="width: 18rem;">
+               <img src="https://api.minimalavatars.com/avatar/random/svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">alienWEP</h5>
+                  <b>
+                    <p class="card-text">Vine aca por que Marte esta sobre poblado .-.</p>
+                  </b>
+                </div>
+                <ul class="animate__animated animate__rubberBand">
+                  <b>
+                    <li id="Planet" class="list-group-item">Planeta natal</li>
+                    <h6 id="nombre" class="list-group-item">Names</h6>
+                  </b>
+                </ul>
+            </div>
           </div>
-          <ul class="animate__animated animate__rubberBand">
-            <b>
-              <li id="Planet" class="list-group-item">Planeta natal</li>
-              <h6 id="nombre" class="list-group-item">Names</h6>
-            </b>
-          </ul>
         </div>
       </div>
       <div class="col-md-4"></div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="./src/script.js"></script>
   </body>
 </html>
+
+
