--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
               </div>
               <form class="d-flex" role="search">
                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-               <button class="btn btn-outline-success" type="submit">Search</button>
+               <button type="button" onClick="window.location.reload();">Cargar</button>
               </form>
-            </div>
+           </div>
           </div>
         </div>
         <div class="col-md-4"></div>
