--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </div>
               <form class="d-flex" role="search">
                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-               <button type="button" onClick="window.location.reload();">Cargar</button>
+               <button type="button" class="btn btn-outline-success" onClick="window.location.reload();">Cargar</button>
               </form>
            </div>
           </div>
