Arreglo el boton

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </div>
               <form class="d-flex" role="search">
                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-               <button type="button" class="btn btn-outline-success" gonClick="window.location.reload();">Cargar</button>
+               <button type="button" class="btn btn-outline-success" onClick="window.location.reload();">Cargar</button>
               </form>
            </div>
           </div>
@@ -73,5 +73,3 @@
     <script src="./src/script.js"></script>
   </body>
 </html>
-
-
