--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <link rel="stylesheet" href="./src/styles.css">
-    <linkrel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>  
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,30 +40,40 @@
         <div class="col-md-4">
           <div class="card" style="width: 22rem;">
             <div class="card-body">
-              <h1>alienWEP</h1>
+              <h1>Match con compatibilidad</h1>
               <div style="width: 18rem;">
                 <img src="https://api.minimalavatars.com/avatar/random/svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">alienWEP</h5>
-                  <b>
-                    <p class="card-text">Vine aca por que Marte esta sobre poblado .-.</p>
-                  </b>
+                  <p>
+                    <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Descripcion del sujeto</a>
+                  </p>
+                  <div class="row">
+                    <div class="col">
+                      <div class="collapse multi-collapse" id="multiCollapseExample1">
+                        <div class="card card-body">
+                          <b>
+                            <p class="card-text">Vine aca por que Marte esta sobre poblado .-.</p>
+                          </b>
+                        </div>
+                       <ul class="animate__animated animate__rubberBand">
+                          <b>
+                           <li id="Planet" class="list-group-item">Planeta natal</li>
+                           <h6 id="nombre" class="list-group-item">Names</h6>
+                           
+                          </b>
+                          <form class="d-flex" role="search">
+                            <button type="button" class="btn btn-outline-success" onClick="window.location.reload();">Otro</button>
+                           </form>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-               <ul class="animate__animated animate__rubberBand">
-                  <b>
-                   <li id="Planet" class="list-group-item">Planeta natal</li>
-                   <h6 id="nombre" class="list-group-item">Names</h6>
-                  </b>
-                </ul>
-              </div>
-              <form class="d-flex" role="search">
-               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-               <button type="button" class="btn btn-outline-success" onClick="window.location.reload();">Cargar</button>
-              </form>
-           </div>
+              </div>  
+            </div>
+            <div class="col-md-4"></div>
           </div>
         </div>
-        <div class="col-md-4"></div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
