Pongo con lucas el boton en medio//centradito

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <div class="card" style="width: 22rem;">
             <div class="card-body">
               <h1>Match con compatibilidad</h1>
+              <font size="5" color="#0000ff"> Felicidades has encontrado una nueva pareja: </font>
               <div style="width: 18rem;">
                 <img src="https://api.minimalavatars.com/avatar/random/svg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -51,16 +52,17 @@
                     <div class="col">
                       <div class="collapse multi-collapse" id="multiCollapseExample1">
                         <b>
-                          <p class="card-text">Vine aca por que Marte esta sobre poblado .-.</p>
                         </b>
-                       <ul class="animate__animated animate__rubberBand">
+                        <ul class="animate__animated animate__rubberBand">
                           <b>
-                           <li id="Planet" class="list-group-item">Planeta natal</li>
-                           <h6 id="nombre" class="list-group-item">Names</h6>
+                            <li id="Planet" class="list-group-item">Planeta natal</li>
+                            <h6 id="nombre" class="list-group-item">Names</h6>
                           </b>
-                          <form class="d-flex" role="search">
-                            <button type="button" class="btn btn-outline-success" onClick="window.location.reload();">Otro</button>
-                           </form>
+                          <form class="d-flex" role="search"> 
+                            <div class="d-grid gap-2 col-6 mx-auto">
+                              <button type="button" class="btn btn-outline-success" onClick="window.location.reload();">Otro</button>
+                            </div>
+                          </form> 
                         </ul>
                       </div>
                     </div>
